--- a/src/container/Banner/banner.css
+++ b/src/container/Banner/banner.css
@@ -1,38 +1,65 @@
 .banner{
     position: relative;
-    height: 500px;
-    background-position: "center center";
-    background-size: cover;
+    height: 548px;
+    color: white;
+    
+    /* background-position: center center;
+    background-size: cover; */
     object-fit: contain;
 }
 
 .banner__content{
- padding-top: 180px;
- padding-left: 100px;
- padding-right: 100px;
+    margin-left: 30px;
+
+ padding-top: 160px;
+ height: 270px;
+ padding-left: 50px;
+ padding-right: 50px;
+ font-size: 14px;
 }
 
 .banner__button{
-    background-color: #111;
+    cursor: pointer;
     color: #fff;
-    font-size: large;
-    padding-left: 25px;
-    padding-right: 25px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 10px;
-    border-color: #111;
-    margin-right: 15px;
+    outline: none;
+    border: none;
+    font-weight: 700;
+    border-radius: 0.2vw;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    margin-right: 1rem;
+    padding-top: 0.5rem;
+    background-color: rgba(51, 51, 51, 0.5);
+    padding-bottom: 0.5rem;
 
 }
 
 .banner__button:hover{
-    color: #111;
-    background-color: #fff;
-    transition: 0.8s;
+    color: #000;
+    background-color: #e6e6e6;
+    transition: all 0.8s;
 }
 
 .banner__title{
-    font-weight: 700;
+    font-weight: 800;
     font-size: 45px;
+    padding-bottom: 0.3rem;
+}
+.banner__description{
+    width: 45rem;
+    line-height: 1.3;
+    padding-top: 1rem;
+    font-size: 0.8rem; 
+    max-width: 360px;
+    height: 80px;
+}
+
+.banner--fadeBottom{
+    height: 7.4rem;
+    background-image:linear-gradient(
+        180deg,
+        transparent,
+        rgba(37, 37, 37, 0.61),
+        #111
+    );
 }
